--- a/src/pages/Homepage/homepage.scss
+++ b/src/pages/Homepage/homepage.scss
@@ -21,7 +21,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    min-height: 100vh;
+    height: 100vh;
     color: #fff;
     position: relative;
     z-index: 1;
