--- a/src/pages/How/how.scss
+++ b/src/pages/How/how.scss
@@ -5,7 +5,7 @@
          background-size: cover;
          background-position: center;
          background-repeat: no-repeat;
-         min-height: 100vh;
+         height: 100vh;
          color: #fff;
          position: relative;
          z-index: 1;
